force-app/main/default/objects/Flight_Snapshot__c/Flight_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Immutable audit object capturing the exact state of a flight segment upon completion.</description>
    <label>Flight Snapshot</label>
    <pluralLabel>Flight Snapshots</pluralLabel>
    <nameField>
        <displayFormat>SNAP-{0000000}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>