force-app/main/default/objects/Flight_Snapshot__c/fields/Final_Seat_Map__c.field-meta.xml
<CustomField>
    <fullName>Final_Seat_Map__c</fullName>
    <description>Identical copy of the JSON seat matrix at flight closure.</description>
    <label>Final Seat Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>