force-app/main/default/objects/Flight_Snapshot__c/fields/Flight_Segment__c.field-meta.xml
<CustomField>
    <fullName>Flight_Segment__c</fullName>
    <description>Link to the completed flight segment.</description>
    <label>Flight Segment</label>
    <referenceTo>Flight_Segment__c</referenceTo>
    <relationshipLabel>Flight Snapshots</relationshipLabel>
    <relationshipName>Flight_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>