force-app/main/default/objects/Flight_Snapshot__c/fields/Occupancy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Rate__c</fullName>
    <label>Occupancy Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>